[workspace]
members = [

# --- NODEs ---
  'node',
  #'Custom_Nodes/proof_of_work',


# --- RUNTIMEs ---
 #'runtime',

#PALLETS
   #'pallets/template',
      #'pallets/compound_interest',
      #'pallets/Fixed_points',
      #'pallets/ratingsystem'
      'pallets/recurringpayments',
      'pallets/membership',
      #'pallets/sumstorage',
      #'pallets/sumstorage/rpc',
      #'pallets/sumstorage/runtime-api',
      #'pallets/sumstorage',

# --- CONSENSUS ---
 #'consensus/pow',
]
[profile.release]
panic = 'unwind'
