[workspace]
members = [

# --- NODEs ---
  'node',
  #'Custom_Nodes/proof_of_work',


# --- RUNTIMEs ---
 'runtime',

#PALLETS
   #'pallets/template',
      #'pallets/compound_interest',
      #'pallets/Fixed_points',
      #'pallets/ratingsystem'
     # 'pallets/recurringpayments',
     # 'pallets/authenticate',
      #'pallets/sumstorage',
      #'pallets/sumstorage/rpc',
      #'pallets/sumstorage/runtime-api',
      #'pallets/sumstorage',
     #'pallets/pallet-member/membership',
     #'pallets/pallet-member/authenticate',
     'pallets/pallet-member/*',
     'pallets/pallet-shop/*',
     


# --- CONSENSUS ---
 #'consensus/pow',
]
[profile.release]
panic = 'unwind'
