[package]
name = "sum-storage-rpc"
version = "2.0.0"
edition = "2021"
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
#repository = 'https://github.com/substrate-developer-hub/recipes'
description = "A pallet that demonstrates simple RPC for summing numbers"
license = "GPL-3.0-or-later"


[dependencies]
codec = { package = "parity-scale-codec", version = "2.3.1" }
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
serde = { version = "1.0", features = ["derive"], optional = true }

# Substrate packages

sp-api = { version = '3.0', default-features = false }
sp-blockchain = { version = '3.0', default-features = false}
sp-rpc = { version = '3.0', default-features = false}
sp-runtime = { version = '3.0', default-features = false}

# local packages
#sum-storage-rpc = { path = "../pallets/sumstorage/rpc"}
sum-storage-runtime-api = { version = "2.0.0", path = "../runtime-api", default-features = false }

[features]
default = ["std"]
std = [
  "serde",
  "sp-api/std",
  "sp-runtime/std",
  "sum-storage-runtime-api/std"
]